ssl-options-with-kubernetes/3/kens-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kens-deployment
spec:
  selector:
    matchLabels:
      app: kens-app
  replicas: 2
  template:
    metadata:
      labels:
        app: kens-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.15
        ports:
        - containerPort: 80
