ssl-options-with-kubernetes/3/kens-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kens-service
spec:
  type: ClusterIP
  selector:
    app: kens-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
