ssl-options-with-kubernetes/3/kens-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: kens-app
  name: kens-ingress
spec:
  tls:
  - hosts:
    - test-ken.lab.capstonec.net
  rules:
  - host: test-ken.lab.capstonec.net
    http:
      paths:
      - backend:
          serviceName: kens-service
          servicePort: 80
        path: /
